[package]
name = "limit-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.32.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies","stream","blocking","json"] }
tokio = { version = "1", features = ["full"] }